# realtime-room-chat

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
app/: ai_service.py  auth.py  chat_cache.py  db.py  imagekit.py  limiter.py  locustfile.py  logger.py  main.py  middleware.py  redis_client.py  security.py  websocket_manager.py
app/crud/: messages.py  rooms.py  users.py
app/models/: message.py  refresh_token.py  room.py  user.py
app/routers/: message.py  room.py  user.py  websocket.py
app/schemas/: message.py  room.py  user.py
migrations/: env.py
migrations/versions/: 201c7f7bf886_fixes.py  349332601584_update_db_url.py  404e84f774d9_add_invite_code_to_room.py  ae9d4d62ec08_add_refresh_tokens_table.py  b481a1cc83d9_fix.py  dd64f0f8fb6d_initial_clean_schema.py  e77e9919853c_add_refresh_tokens_table.py  ead9e6e93ffe_initial_schema.py
scripts/: generate_users.py
tests/: conftest.py  test_message.py  test_room.py  test_user.py
