[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.131.0",
    "google-genai>=1.66.0",
    "imagekitio>=5.2.0",
    "locust>=2.43.4",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "python-json-logger>=4.1.0",
    "redis[asyncio]>=7.4.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.46",
    "websocket-client>=1.9.0",
]
